infra/kubernetes/todo-app/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
  namespace: todo-app

spec:
  ingressClassName: nginx

  rules:
    - host: todo.local

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend
                port:
                  number: 8000
